<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.hossam.simpledatabase.DetailsActivity">

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="com.example.hossam.popularmoviesappstage1.MovieDetailsActivity">

        <TextView
            android:id="@+id/movie_title"
            android:textSize="36sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitestar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/vote_average"
            android:textStyle="italic"
            android:text="@string/vote_average"
            android:layout_gravity="top"/>
        <TextView
            android:id="@+id/vote_average"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"/>

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/movie_poster" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/release_date"
            android:text="@string/release_date"
            android:textStyle="italic"
            android:layout_gravity="end"/>
        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/plot_synopsis"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/user_review"
            android:textStyle="italic"
            android:text="@string/reviews"
            android:textSize="22sp"
            android:layout_gravity="top"/>

        <TextView
            android:id="@+id/user_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>
